adding recursion content 2/2

--- a/src/13_recursion.ipynb
+++ b/src/13_recursion.ipynb
@@ -88,7 +88,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n"
+    "\n",
+    "## Understanding recursion with factorials.\n",
+    "\n",
+    "Factorials provide a helpful context for grasping the concept of recursion. They are a mathematical technique enabling the calculation of extensive multiplication sequences using a single expression. For example, when calculating $$4!$$ , you break it down into $$ 4 * 3!$$, then $$ 4 * 3 * 2!$$, and ultimately $$ 4 * 3 * 2 * 1!$$ Here,  1! acts as the base case, and the recursion concludes once this base case is reached. This recursive breakdown illustrates how a complex computation, like factorials, can be systematically addressed through step-by-step simplifications."
    ]
   }
  ],
