ex. 4 - digit to roman number

--- a/src/exercises/3_max_area.ipynb
+++ b/src/exercises/3_max_area.ipynb
@@ -139,10 +139,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def maxArea(height):\n",
+    "    max_ = 0\n",
+    "    left = 0\n",
+    "    right = len(height)- 1\n",
+    "\n",
+    "    while left < right:\n",
+    "        currentArea = min(height[left], height[right]) * (right - left)\n",
+    "        max_ = max(max_, currentArea)\n",
+    "\n",
+    "        if height[left] < height[right]:\n",
+    "            left +=1\n",
+    "        else:\n",
+    "            right -= 1\n",
+    "\n",
+    "    return max_\n",
+    "\n",
+    "\n",
+    "\n",
+    "list_:list = [2,3,4,5,18,17,6]\n",
+    "maxArea(list_)"
+   ]
   }
  ],
  "metadata": {
